updated where main.css links from

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "Rafflebox Homepage"
 
 <div class="decoration"></div>
 
-<section class="hero" data-background="graphic_top3x.png">
+<section class="hero">
     <div class="inner-page">
         <div class="headline">
             <h1>Fundraising made easy.</h1>
