use relative image urls

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: "Rafflebox Homepage"
             <div class="col-xs-4">
                 <div class="tile">
                     <div class="container-image">
-                        <img src="/images/duration3x.png" alt="" class="responsive"/>
+                        <img src="./images/duration3x.png" alt="" class="responsive"/>
                     </div>
                     <h4>Duration</h4>
                     <p>Your raffle can run from one week to one year</p>
@@ -37,7 +37,7 @@ title: "Rafflebox Homepage"
             <div class="col-xs-4">
                 <div class="tile">
                     <div class="container-image">
-                        <img src="/images/audience3x.png" alt="" class="responsive"/>
+                        <img src="./images/audience3x.png" alt="" class="responsive"/>
                     </div>
                     <h4>Audience</h4>
                     <p>Anyone with the link can buy tickets</p>
@@ -46,7 +46,7 @@ title: "Rafflebox Homepage"
             <div class="col-xs-4">
                 <div class="tile">
                     <div class="container-image">
-                        <img src="/images/easy3x.png" alt="" class="responsive"/>
+                        <img src="./images/easy3x.png" alt="" class="responsive"/>
                     </div>
                     <h4>Easy</h4>
                     <p>Our interface is simple to use</p>
@@ -90,7 +90,7 @@ title: "Rafflebox Homepage"
             <div class="col-sm-6 step">
                 <div>
                     <div class="container-image">
-                        <img src="/images/hiw1_account3x.png" alt="" class="responsive" />
+                        <img src="./images/hiw1_account3x.png" alt="" class="responsive" />
                     </div>
                     <h4>Create an account</h4>
                     <p>Sign up in minutes with your AGLC charity number</p>
@@ -99,7 +99,7 @@ title: "Rafflebox Homepage"
             <div class="col-sm-6 step">
                 <div>
                     <div class="container-image">
-                        <img src="/images/hiw2_clicks3x.png" alt="" class="responsive" />
+                        <img src="./images/hiw2_clicks3x.png" alt="" class="responsive" />
                     </div>
                     <h4>Create your raffle</h4>
                     <p>Define the duration and ticket cost; then post and market your raffle through social media channels</p>
@@ -108,7 +108,7 @@ title: "Rafflebox Homepage"
             <div class="col-sm-6 step">
                 <div>
                     <div class="container-image">
-                        <img src="/images/hiw3_tickets3x.png" alt="" class="responsive" />
+                        <img src="./images/hiw3_tickets3x.png" alt="" class="responsive" />
                     </div>
                     <h4>Sell tickets</h4>
                     <p>Supporters can purchase raffle tickets online</p>
@@ -117,7 +117,7 @@ title: "Rafflebox Homepage"
             <div class="col-sm-6 step">
                 <div>
                     <div class="container-image">
-                        <img src="/images/hiw4_winner3x.png" alt="" class="responsive" />
+                        <img src="./images/hiw4_winner3x.png" alt="" class="responsive" />
                     </div>
                     <h4>Pick a winner</h4>
                     <p>Draw your winner and contact them with the good news</p>
