First draft of the sign-up page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: "Rafflebox Homepage"
         <div class="headline">
             <h1>Fundraising made easy.</h1>
             <p>Our simple platform enables non-profits to create and manage online raffles.</p>
-            <a href="#" class="button">Sign up now</a>
+            <a href="./sign-up.html" class="button">Sign up now</a>
         </div>
     </div>
 </section>
