--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: "Rafflebox Homepage"
         <div class="headline">
             <h3>The Benefits</h3>
             <h1>Effective and Flexible</h1>
-            <p>Rafflebox gives you flexibility and eliminates the time and energy normally spend on coordinating a physical event.</p>
+            <p>Rafflebox gives you flexibility and eliminates the time and energy normally spent on coordinating a physical event.</p>
         </div>
         <div class="tiles clearfix">
             <div class="col-xs-4">
@@ -31,7 +31,7 @@ title: "Rafflebox Homepage"
                         <img src="./images/duration3x.png" alt="" class="responsive"/>
                     </div>
                     <h4>Duration</h4>
-                    <p>Your raffle can run from one week to one year</p>
+                    <p>Your raffle can run from one day to one year</p>
                 </div>
             </div>
             <div class="col-xs-4">
@@ -62,7 +62,7 @@ title: "Rafflebox Homepage"
         <div class="headline">
             <h3>Who is it for?</h3>
             <h1>For Non-profits</h1>
-            <p>Any Alberta-based organization with a charitable registration number can sign up.</p>
+            <p>Any non-profit or charitable organization can sign up for Rafflebox.</p>
         </div>
         <div class="balls">
             <div class="ball teams">
@@ -93,7 +93,7 @@ title: "Rafflebox Homepage"
                         <img src="./images/hiw1_account3x.png" alt="" class="responsive" />
                     </div>
                     <h4>Create an account</h4>
-                    <p>Sign up in minutes with your AGLC charity number</p>
+                    <p>Sign up in minutes with non-profit or charity information</p>
                 </div>
             </div>
             <div class="col-sm-6 step">
@@ -111,7 +111,7 @@ title: "Rafflebox Homepage"
                         <img src="./images/hiw3_tickets3x.png" alt="" class="responsive" />
                     </div>
                     <h4>Sell tickets</h4>
-                    <p>Supporters can purchase raffle tickets online</p>
+                    <p>Supporters purchase raffle tickets online or electronically in-person</p>
                 </div>
             </div>
             <div class="col-sm-6 step">
@@ -142,7 +142,7 @@ title: "Rafflebox Homepage"
         <div class="headline">
             <p>Do you have a fundraising need?</p>
             <p>Fill out our simple form and we'll get you started!</p>
-            <a href="#" class="button">Sign up now</a>
+            <a href="./sign-up.html" class="button">Sign up now</a>
         </div>
     </div>
 </section>
