Added CSS for select inputs on forms

--- a/sign-up.html
+++ b/sign-up.html
@@ -33,6 +33,14 @@ title: "Rafflebox Sign-up"
             <label>Charitable registration number (optional)</label>
             <input type="text" name="registration-number" id="registration-name" />
 
+            <label>Province</label>
+            <div class="container-select">
+                <select>
+                    <option>Alberta</option>
+                    <option>British Columbia</option>
+                </select>
+            </div>
+
             <input type="submit" class="button" id="submit" value="Submit" />
         </form>
     </div>
